--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css" />
+    <!-- "defer" loads script after entire page is parsed -->
+    <script src="../scripts/main.js" defer></script>
     <title>Georgina's Calculator</title>
 </head>
 <body>
     <h1>Test 2</h1>
-    <script src="../scripts/main.js"></script>
+
 </body>
 </html>
