add grid container

--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -10,7 +10,18 @@
     <title>Georgina's Calculator</title>
 </head>
 <body>
-    <h1>Test 2</h1>
-
+    <!-- <h1>Test 2</h1> -->
+    <!-- to apply grid to layout to container-->
+    <div class="calculator-grid">
+        <!-- output screen -->
+        <div class="output">
+            <!-- previous result -->
+            <div class="previous-operand"></div>
+            <!-- current result -->
+            <div class="current-operand"></div>
+        </div>
+        <!-- All Clear button -->
+        <button class="span-two">AC</button>
+    </div>
 </body>
 </html>
