--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -21,7 +21,24 @@
             <div class="current-operand"></div>
         </div>
         <!-- All Clear button -->
-        <button class="span-two">AC</button>
+        <button class="two-times-span">AC</button>
+        <button>Delete</button>
+        <button>÷</button>
+        <button>×</button>
+        <button>-</button>
+        <button>+</button>
+        <button class="two-times-span">=</button>
+        <button>.</button>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>0</button>
     </div>
 </body>
 </html>
