--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -16,9 +16,9 @@
         <!-- output screen -->
         <div class="output">
             <!-- previous result -->
-            <div class="previous-operand">prev</div>
+            <div class="previous-operand"></div>
             <!-- current result -->
-            <div class="current-operand">cur</div>
+            <div class="current-operand"></div>
         </div>
         <!-- All Clear button -->
         <button class="two-times-span">AC</button>
