--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -15,31 +15,33 @@
     <div class="calculator-grid">
         <!-- output screen -->
         <div class="output">
+            <!-- data attributes -->
             <!-- previous result -->
-            <div class="previous-operand"></div>
+            <div data-previous-operand class="previous-operand"></div>
             <!-- current result -->
-            <div class="current-operand"></div>
+            <div data-current-operand class="current-operand"></div>
         </div>
+        <!-- data attributes -->
         <!-- All Clear button -->
-        <button class="two-times-span">AC</button>
-        <button>Delete</button>
-        <button>÷</button>
-
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>×</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>+</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>-</button>
-        <button>.</button>
-        <button>0</button>
-        <button class="two-times-span">=</button>
+        <button data-all-clear class="two-times-span">AC</button>
+        <!-- data attributes -->
+        <button data-delete>Delete</button>
+        <button data-operation>÷</button>
+        <button data-number>1</button>
+        <button data-number>2</button>
+        <button data-number>3</button>
+        <button data-operation>×</button>
+        <button data-number>4</button>
+        <button data-number>5</button>
+        <button data-number>6</button>
+        <button data-operation>+</button>
+        <button data-number>7</button>
+        <button data-number>8</button>
+        <button data-number>9</button>
+        <button data-operation>-</button>
+        <button data-number>.</button>
+        <button data-number>0</button>
+        <button data-equals class="two-times-span">=</button>
     </div>
 </body>
 </html>
